fix(table): add dark mode

--- a/packages/table/src/VDataTablePagination.scss
+++ b/packages/table/src/VDataTablePagination.scss
@@ -1,4 +1,11 @@
+:root {
+  --v-data-table-pagination-bg-color: theme('colors.white');
+  --v-data-table-pagination-text-color: theme('colors.gray.700');
+}
+
 .v-data-table-pagination {
+  background-color: var(--v-data-table-pagination-bg-color);
+
   @apply w-full
     px-6
     py-3
@@ -17,12 +24,14 @@
   }
 
   &-meta {
+    color: var(--v-data-table-pagination-text-color);
+
     @apply w-auto
       hidden
       sm:flex
       gap-1
       items-center
-      text-sm text-gray-700
+      text-sm
       order-2 flex-1;
 
     &-showing-text,
